--- a/tx-seata-sample/src/main/resources/application.yml
+++ b/tx-seata-sample/src/main/resources/application.yml
@@ -10,28 +10,28 @@ spring:
       datasource:
         order:
           username: root
-          password: 123456
-          url: jdbc:mysql://39.108.158.138:3306/seata_order?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+          password: root
+          url: jdbc:mysql://localhost:3306/seata_order_dd?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           driver-class-name: com.mysql.cj.jdbc.Driver
-          schema: classpath:db/schema-order.sql
+#          schema: classpath:db/schema-order.sql
         account:
           username: root
-          password: 123456
-          url: jdbc:mysql://39.108.158.138:3306/seata_account?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+          password: root
+          url: jdbc:mysql://localhost:3306/seata_account_dd?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           driver-class-name: com.mysql.cj.jdbc.Driver
-          schema: classpath:db/schema-account.sql
+#          schema: classpath:db/schema-account.sql
         product:
           username: root
-          password: 123456
-          url: jdbc:mysql://39.108.158.138:3306/seata_product?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+          password: root
+          url: jdbc:mysql://localhost:3306/seata_product_dd?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           driver-class-name: com.mysql.cj.jdbc.Driver
-          schema: classpath:db/schema-product.sql
-        test:
-          username: sa
-          password: ""
-          url: jdbc:h2:mem:test
-          driver-class-name: org.h2.Driver
-          seata: false #这个数据源不需要seata
+#          schema: classpath:db/schema-product.sql
+#        test:
+#          username: sa
+#          password: ""
+#          url: jdbc:h2:mem:test
+#          driver-class-name: org.h2.Driver
+#          seata: false #这个数据源不需要seata
 seata:
   enabled: true
   application-id: applicationName
@@ -44,7 +44,7 @@ seata:
       my_test_tx_group: default
     grouplist:
       #seata-server地址仅file注册中心需要
-      default: 39.108.158.138:8091
+      default: localhost:8091
   config:
     type: file
   registry:
