--- a/tx-seata-sample/src/main/resources/application.yml
+++ b/tx-seata-sample/src/main/resources/application.yml
@@ -12,19 +12,19 @@ spring:
           username: root
           password: root
           url: jdbc:mysql://localhost:3306/seata_order_dd?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
-          driver-class-name: com.mysql.cj.jdbc.Driver
+          driver-class-name: com.mysql.jdbc.Driver
 #          schema: classpath:db/schema-order.sql
         account:
           username: root
           password: root
           url: jdbc:mysql://localhost:3306/seata_account_dd?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
-          driver-class-name: com.mysql.cj.jdbc.Driver
+          driver-class-name: com.mysql.jdbc.Driver
 #          schema: classpath:db/schema-account.sql
         product:
           username: root
           password: root
           url: jdbc:mysql://localhost:3306/seata_product_dd?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
-          driver-class-name: com.mysql.cj.jdbc.Driver
+          driver-class-name: com.mysql.jdbc.Driver
 #          schema: classpath:db/schema-product.sql
 #        test:
 #          username: sa
