tx-eureka-mybatisplus-seata-sample代码初始化

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <module>tx-atomikos-sample</module>
         <module>tx-seata-sample</module>
         <module>tx-eureka-seata-sample</module>
+        <module>tx-eureka-mybatisplus-seata-sample</module>
     </modules>
 
     <dependencyManagement>
