tx-eureka-mybatisplus-seata-sample> 测试测试源不需要被代理

--- a/tx-eureka-mybatisplus-seata-sample/mp-account/src/main/resources/application.yml
+++ b/tx-eureka-mybatisplus-seata-sample/mp-account/src/main/resources/application.yml
@@ -27,6 +27,12 @@ spring:
           password: root
           url: jdbc:mysql://localhost:3306/fescar?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
           driver-class-name: com.mysql.jdbc.Driver
+        test:
+          username: root
+          password: root
+          url: jdbc:mysql://localhost:3306/seata?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
+          driver-class-name: com.mysql.jdbc.Driver
+          seata: false #这个数据源不需要seata
       druid:
         test-while-idle: true
         test-on-borrow: true
